200-deploily-backend/210-deploily-celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploily-celery
  name: deploily-celery
  namespace: deploily
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploily-celery
  strategy: {}
  template:
    metadata:
      labels:
        app: deploily-celery
    spec:
      containers:
        - image: ghcr.io/deploily/deploily-backend:main
          imagePullPolicy: Always
          name: deploily-celery
          command:
            - /start-celeryworker
          ports:
            - name: http
              containerPort: 5000
      restartPolicy: Always
