200-deploily-backend/210-deploily-cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploily-cron
  name: deploily-cron
  namespace: deploily
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploily-cron
  strategy: {}
  template:
    metadata:
      labels:
        app: deploily-cron
    spec:
      containers:
        - image: ghcr.io/deploily/deploily-backend:main
          imagePullPolicy: Always
          name: deploily-cron
          command:
            - /start-cron
          ports:
            - name: http
              containerPort: 5000
      restartPolicy: Always
