200-deploily-backend/210-deploily-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploily-back
  name: deploily-back
  namespace: deploily
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploily-back
  strategy: {}
  template:
    metadata:
      labels:
        app: deploily-back
    spec:
      hostAliases:
        - ip: "10.96.12.205"
          hostnames:
            - "auth.deploily.local"
      containers:
        - image: ghcr.io/deploily/deploily-backend:main
          imagePullPolicy: Always
          name: deploily-back
          command:
            - /start
          ports:
            - name: http
              containerPort: 5000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deploily-back
  name: deploily-back
  namespace: deploily
spec:
  ports:
    - port: 5000
      name: http
      protocol: TCP
      targetPort: 5000
  selector:
    app: deploily-back
  type: ClusterIP
