200-deploily-backend/140-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploily
  namespace: deploily
spec:
  ingressClassName: nginx
  rules:
    - host: deploily.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deploily-back
                port:
                  number: 5000
    - host: auth.deploily.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
