200-deploily-backend/150-rancher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
  namespace: deploily
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      serviceAccountName: rancher
      containers:
        - name: rancher
          image: rancher/rancher:stable
          ports:
            - name: https
              containerPort: 443
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: deploily
spec:
  selector:
    app: rancher
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: deploily
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rancher.deploily.local
      secretName: rancher-tls
  rules:
    - host: rancher.deploily.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 80
